cursive-bootstrap/tests/ui/E-CON/E-CON-0122.cursive
// RUN: compile-fail
// DIAG: E-CON-0122
// SPEC: 8.9
// DESC: Move of binding from outer parallel scope

record Resource {
    value: i32
}

procedure move_outer() -> () {
    parallel {
        let r: Resource = Resource { value: 42 }
        parallel {
            spawn {
                let x: Resource = move r  //~ ERROR E-CON-0122: move from outer parallel
            }
        }
    }
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
